# databot

./: .env.example  .env.local  .gitignore  .gitlab-ci.yml  CLAUDE.md  RALPH_PROMPT.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_knowledge_base_embeddings.py  0003_content_shares.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: admin_agent.py  agentic_templates.py  content_agent.py  data_agent.py  orchestrator.py
backend/app/api/: admins.py  analytics.py  brand_templates.py  calendar.py  chat.py  events.py  feedback.py  hierarchy.py  prefetch.py  router.py  shares.py  sync.py  upload.py
backend/app/db/: knowledge_base.py  on24_db.py  on24_hierarchy.py  session.py
backend/app/models/: __init__.py  agent_audit_log.py  attendee.py  base.py  content_share.py  engagement.py  event.py  poll.py  registrant.py  survey.py  sync_log.py
backend/app/schemas/: event.py
backend/app/services/: brand_voice.py  data_prefetch.py  email_service.py  mcp_client.py  on24_client.py  (+3 more)
backend/tests/: benchmark_api_vs_db.py  benchmark_read_apis.py  test_accessibility.py  test_api_health.py  test_brand_templates.py  test_chart_generation.py  test_chip_generation.py  test_content_html.py  test_data_agent.py  test_email_service.py  test_on24_client.py  test_on24_query_tools.py  test_orchestrator_history.py  test_rate_limiter.py  test_response_cache.py  test_routing.py  test_security.py  test_shares.py  test_upload.py
(+111 files in other folders)
